--- a/eda.ipynb
+++ b/eda.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "- data from: https://github.com/CSSEGISandData/COVID-19/tree/master/csse_covid_19_data/csse_covid_19_daily_reports\n",
-    "- using the dataset from https://towardsdatascience.com/gather-all-the-coronavirus-data-with-python-19aa22167dea\n"
+    "- using the cleaned dataset from https://towardsdatascience.com/gather-all-the-coronavirus-data-with-python-19aa22167dea\n"
    ]
   },
   {
